chore: 静的サイト用（EJS/HTML/after-build/検証）を削除
- EJSテンプレ（src/ejs）と静的HTML（src/**/*.html）を撤去\n- dist前提のafter-build/html-validateを廃止\n- package.jsonの依存・scriptを静的サイト前提から整理

--- a/package.json
+++ b/package.json
@@ -5,23 +5,19 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && node scripts/after-build.mjs",
+    "build": "vite build",
     "build:only": "vite build",
     "preview": "vite preview",
     "build:preview": "npm run build && npm run preview",
     "clean": "rm -rf dist src/.vite src/.img",
     "clean:all": "rm -rf dist src/.vite src/.img node_modules package-lock.json",
     "reinstall": "npm run clean:all && npm install",
-    "validate:html": "html-validate dist/",
-    "validate:build": "npm run build && npm run validate:html",
     "prepare": "husky",
     "test": "open https://t2025-10-01vite.rea1i2e.net/"
   },
   "devDependencies": {
     "@vheemstra/vite-plugin-imagemin": "^2.2.1",
     "autoprefixer": "^10.4.21",
-    "glob": "^11.0.0",
-    "html-validate": "^10.1.2",
     "husky": "^9.1.7",
     "imagemin-gif2webp": "^3.0.0",
     "imagemin-gifsicle": "^7.0.0",
@@ -29,15 +25,10 @@
     "imagemin-pngquant": "^10.0.0",
     "imagemin-svgo": "^11.0.1",
     "imagemin-webp": "^8.0.0",
-    "js-beautify": "^1.15.4",
-    "jsdom": "^27.0.0",
     "postcss": "^8.4.47",
     "postcss-sort-media-queries": "^5.2.0",
     "sass": "^1.93.0",
-    "sharp": "^0.34.4",
     "vite": "^6.3.6",
-    "vite-plugin-ejs": "^1.7.0",
-    "vite-plugin-live-reload": "^3.0.5",
     "vite-plugin-sass-glob-import": "^5.0.0"
   },
   "dependencies": {
