--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ dist
 dist-ssr
 *.local
 
+# Deploy secrets (local only)
+.env.deploy
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
