--- a/env.deploy.example
+++ b/env.deploy.example
@@ -2,5 +2,7 @@ FTP_SERVER=ftp.example.com
 FTP_USERNAME=your-username
 FTP_PASSWORD=your-password
 FTP_SERVER_DIR=/public_html/wp-content/themes/t2025-12-24vite-wp/
+DISCORD_WEBHOOK=
+TEST_URL=
 
 
