--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:only": "vite build",
-    "preview": "vite preview",
+    "preview": "open http://t2025-12-24vite-wp.local",
     "build:preview": "npm run build && npm run preview",
     "clean": "rm -rf dist src/.vite src/.img",
     "clean:all": "rm -rf dist src/.vite src/.img node_modules package-lock.json",
