env.deploy.example, style.css整備

--- a/env.deploy.example
+++ b/env.deploy.example
@@ -2,5 +2,15 @@ FTP_SERVER=ftp.example.com
 FTP_USERNAME=your-username
 FTP_PASSWORD=your-password
 FTP_SERVER_DIR=/wp-content/themes/your-theme-directory/
-DISCORD_WEBHOOK=
 TEST_URL=
+DISCORD_WEBHOOK=
+
+# このファイルの使い方
+# - このファイルを複製して.env.deployファイルを作成
+# - 複製して作った.env.deployファイルは、コミットしない（.gitignoreに書いてあるのでコミットされない）
+# - 必要な情報を入力（FTPホスト、ユーザー名、パスワード、デプロイ先ディレクトリ、テストURL、Discord Webhook URL）
+# - TEST_URLは、ベーシック認証の情報を含めると便利
+
+# その他のメモ
+# WordPressユーザー名：
+# WordPressパスワード：
