mdファイル整理／import-pages.sh導入／案件id一括置換スクリプト導入

--- a/env.deploy.example
+++ b/env.deploy.example
@@ -1,8 +1,8 @@
 FTP_SERVER=ftp.example.com
 FTP_USERNAME=your-username
 FTP_PASSWORD=your-password
-FTP_SERVER_DIR=/wp-content/themes/your-theme-directory/
-TEST_URL=
+FTP_SERVER_DIR=/public_html/wp-content/themes/t2025-12-24vite-wp/
+TEST_URL=https://t2025-12-24vite-wp.rea1i2e.net/
 DISCORD_WEBHOOK=
 
 # このファイルの使い方
